# geval-judge

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
rubrics/: code_review.yaml  response_quality.yaml
src/geval/: __init__.py  batch.py  cli.py  judge.py  models.py  prompt_builder.py  rubric.py
tests/: test_rubric.py
