[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geval-judge"
version = "0.1.0"
description = "G-Eval: YAML-driven LLM-as-judge scoring with chain-of-thought rubrics"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
geval = "geval.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/geval"]
